[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/template/Panel.png" type="Texture" id=1]
[ext_resource path="res://Images/template/Background.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Datacard.gd" type="Script" id=3]
[ext_resource path="res://Resources/GG2 Font Small.tres" type="DynamicFont" id=5]
[ext_resource path="res://Resources/GG2 Font Large.tres" type="DynamicFont" id=6]
[ext_resource path="res://Resources/GG2 Font Medium.tres" type="DynamicFont" id=7]
[ext_resource path="res://Resources/Divider.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.737255, 0, 0.0117647, 1 )
corner_detail = 1

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.298039, 0.290196, 0.266667, 1 )

[node name="Overlay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBind" type="VBoxContainer" parent="Panel"]
anchor_left = 0.000928052
anchor_right = 1.00093
anchor_bottom = 1.0
margin_left = 16.0
margin_top = 16.0
margin_right = -32.0
margin_bottom = -32.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBind_ID" type="HBoxContainer" parent="Panel/VBind"]
margin_right = 432.0
margin_bottom = 132.0

[node name="CardData" type="VBoxContainer" parent="Panel/VBind/HBind_ID"]
margin_right = 332.0
margin_bottom = 132.0
size_flags_horizontal = 3

[node name="NID" type="HBoxContainer" parent="Panel/VBind/HBind_ID/CardData"]
margin_right = 332.0
margin_bottom = 32.0

[node name="idLabel" type="Label" parent="Panel/VBind/HBind_ID/CardData/NID"]
margin_right = 72.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "#000"

[node name="nameLabel" type="Label" parent="Panel/VBind/HBind_ID/CardData/NID"]
margin_left = 76.0
margin_right = 332.0
margin_bottom = 32.0
rect_min_size = Vector2( 96, 0 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Null"
align = 1
valign = 1
autowrap = true

[node name="PSV" type="VBoxContainer" parent="Panel/VBind/HBind_ID/CardData"]
margin_top = 36.0
margin_right = 332.0
margin_bottom = 82.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="passiveLabel" type="Label" parent="Panel/VBind/HBind_ID/CardData/PSV"]
margin_right = 332.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "<<P>> Null"
align = 1
valign = 1
autowrap = true

[node name="entryLabel" type="Label" parent="Panel/VBind/HBind_ID/CardData/PSV"]
margin_top = 36.0
margin_right = 332.0
margin_bottom = 46.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Null"
autowrap = true

[node name="Images" type="VBoxContainer" parent="Panel/VBind/HBind_ID"]
margin_left = 336.0
margin_right = 432.0
margin_bottom = 132.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="TextureRect" parent="Panel/VBind/HBind_ID/Images"]
margin_right = 96.0
margin_bottom = 96.0
texture = ExtResource( 2 )

[node name="goombleImg" type="TextureRect" parent="Panel/VBind/HBind_ID/Images/background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="typeImg" type="TextureRect" parent="Panel/VBind/HBind_ID/Images"]
margin_top = 100.0
margin_right = 96.0
margin_bottom = 132.0
rect_min_size = Vector2( 96, 32 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="divider" type="TextureRect" parent="Panel/VBind"]
margin_top = 140.0
margin_right = 432.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 4 )
texture = ExtResource( 8 )
expand = true
stretch_mode = 1

[node name="label4" type="Label" parent="Panel/VBind"]
margin_top = 152.0
margin_right = 432.0
margin_bottom = 192.0
rect_min_size = Vector2( 48, 40 )
size_flags_vertical = 1
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Base Stats"
align = 1
valign = 1

[node name="Stats" type="HBoxContainer" parent="Panel/VBind"]
margin_top = 200.0
margin_right = 432.0
margin_bottom = 312.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statBox_1" type="GridContainer" parent="Panel/VBind/Stats"]
margin_right = 214.0
margin_bottom = 112.0
size_flags_horizontal = 3
columns = 2

[node name="hpLabel" type="Label" parent="Panel/VBind/Stats/statBox_1"]
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HP"
align = 1

[node name="hpBar" type="ProgressBar" parent="Panel/VBind/Stats/statBox_1"]
margin_left = 52.0
margin_right = 214.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 500.0
percent_visible = false

[node name="val" type="Label" parent="Panel/VBind/Stats/statBox_1/hpBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -14.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.956863, 0.866667, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="atkLabel" type="Label" parent="Panel/VBind/Stats/statBox_1"]
margin_top = 38.0
margin_right = 48.0
margin_bottom = 72.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "ATK"
align = 1

[node name="atkBar" type="ProgressBar" parent="Panel/VBind/Stats/statBox_1"]
margin_left = 52.0
margin_top = 38.0
margin_right = 214.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
percent_visible = false

[node name="val" type="Label" parent="Panel/VBind/Stats/statBox_1/atkBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -14.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.956863, 0.866667, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dfsLabel" type="Label" parent="Panel/VBind/Stats/statBox_1"]
margin_top = 76.0
margin_right = 48.0
margin_bottom = 110.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "DFS"
align = 1

[node name="dfsBar" type="ProgressBar" parent="Panel/VBind/Stats/statBox_1"]
margin_left = 52.0
margin_top = 76.0
margin_right = 214.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
percent_visible = false

[node name="val" type="Label" parent="Panel/VBind/Stats/statBox_1/dfsBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -14.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.956863, 0.866667, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statBox_2" type="GridContainer" parent="Panel/VBind/Stats"]
margin_left = 218.0
margin_right = 432.0
margin_bottom = 112.0
size_flags_horizontal = 3
columns = 2

[node name="magLabel" type="Label" parent="Panel/VBind/Stats/statBox_2"]
margin_right = 48.0
margin_bottom = 34.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "MAG"
align = 1

[node name="magBar" type="ProgressBar" parent="Panel/VBind/Stats/statBox_2"]
margin_left = 52.0
margin_right = 214.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
percent_visible = false

[node name="val" type="Label" parent="Panel/VBind/Stats/statBox_2/magBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -14.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.956863, 0.866667, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resLabel" type="Label" parent="Panel/VBind/Stats/statBox_2"]
margin_top = 38.0
margin_right = 48.0
margin_bottom = 72.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RES"
align = 1

[node name="resBar" type="ProgressBar" parent="Panel/VBind/Stats/statBox_2"]
margin_left = 52.0
margin_top = 38.0
margin_right = 214.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 300.0
percent_visible = false

[node name="val" type="Label" parent="Panel/VBind/Stats/statBox_2/resBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -14.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.956863, 0.866667, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spdLabel" type="Label" parent="Panel/VBind/Stats/statBox_2"]
margin_top = 76.0
margin_right = 48.0
margin_bottom = 110.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "SPD"
align = 1

[node name="spdBar" type="ProgressBar" parent="Panel/VBind/Stats/statBox_2"]
margin_left = 52.0
margin_top = 76.0
margin_right = 214.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 200.0
percent_visible = false

[node name="val" type="Label" parent="Panel/VBind/Stats/statBox_2/spdBar"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -14.0
margin_bottom = 14.0
rect_min_size = Vector2( 48, 0 )
size_flags_vertical = 3
custom_colors/font_color = Color( 1, 0.956863, 0.866667, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
